# cangjie_tools

./: README.OpenSource  README.md  README.opensource  README_OpenHarmony.md  README_zh.md  last_commit_id.txt  md_files_log.txt
cangjie-language-server/: CMakeLists.txt
cangjie-language-server/doc/: developer_guide_EN.md
cangjie-language-server/src/: CMakeLists.txt
cangjie-language-server/src/json-rpc/: Protocol.cpp  Protocol.h
cangjie-language-server/src/languageserver/: ArkAST.cpp  ArkAST.h  ArkASTWorker.cpp  ArkLanguageServer.cpp  ArkLanguageServer.h  ArkServer.cpp  ArkServer.h  CompilerCangjieProject.cpp  CompilerCangjieProject.h  LSPCompilerInstance.cpp  LSPCompilerInstance.h
cangjie-language-server/src/languageserver/common/: Constants.h  ItemResolverUtil.cpp  ItemResolverUtil.h  SyscapCheck.cpp  Utils.cpp  Utils.h
cangjie-language-server/src/languageserver/index/: BackgroundIndexDB.cpp  BackgroundIndexDB.h  CjdIndex.cpp  CjdIndex.h  IndexDatabase.cpp  IndexDatabase.h  MemIndex.cpp  MemIndex.h  SymbolCollector.cpp  SymbolCollector.h
cangjie-language-server/test/: CMakeLists.txt  testCase.list
cangjie-language-server/test/common/: common.cpp
cangjie-language-server/test/include/: common.h
cangjie-language-server/test/unitTests/: CMakeLists.txt
cangjie-language-server/test/unitTests/json-rpc/: ProtocolTest.cpp  ProtocolTest001.cpp  ProtocolTest002.cpp
cangjie-language-server/test/unitTests/languageserver/: ArkASTTest.cpp  CompilerCangjieProjectTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/fileRefactor/: FileMoveTest.cpp  FileRefactorTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/overrideMethods/: FindOverrideMethodsUtilsTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/prepareRename/: PrepareRenameTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/semanticHighlight/: SemanticHighlightImplTest.cpp
cangjie-language-server/test/unitTests/languageserver/common/: BasicHelperTest.cpp  FindDeclUsageTest.cpp  ItemResolverUtilTest.cpp  SyscapCheckTest.cpp  UtilsTest.cpp  UtilsTest2.cpp
cangjie-language-server/test/unitTests/languageserver/index/: IndexStorageTest.cpp  MemIndexTest.cpp
cangjie-language-server/test/unitTests/languageserver/logger/: CrashReporterTest.cpp
cangjie-language-server/test/unitTests/languageserver/sql/wrapper/: FunctionTest.cpp  SQLiteAPITest.cpp  ValueTest.cpp
cjbind-master/: DEVELOPMENT.md
cjbind-master/testdata/: cjbind_ffi.cj
cjcov/src/util/: command.cj  common.cj
cjfmt/: CMakeLists.txt
cjfmt/doc/: developer_guide.md  developer_guide_EN.md  developer_guide_zh.md
cjfmt/include/Format/: ASTToFormatSource.h
cjfmt/src/: CMakeLists.txt
cjfmt/src/Format/: ASTToFormatSource.cpp
cjhead/config/: config.ini
cjlint/: CMakeLists.txt
cjlint/src/common/: CJLintCompilerInstance.cpp  PosixSpawn.h
cjpm/: cjpm.toml
cjpm/cpp/: CMakeLists.txt  build.sh  hello.cpp  mingw-w64-toolchain.cmake
cjpm/cpp/src/: fswatcher.cpp
cjpm/doc/: developer_guide.md  developer_guide_EN.md  user_guide.md  user_guide_EN.md  user_guide_zh.md
cjpm/src/: main.cj
cjpm/src/command/: build.cj  cjpm.cj  common.cj  factory.cj  run.cj
cjpm/src/config/: central_repository.cj  cjc_dependency.cj  cjmp.cj  common_util.cj  config.cj  cross_compile.cj  dependencies.cj  features.cj  features.cj.macrocall  file_util.cj  history.cj  meta_data.cj  package.cj  profile.cj  profile.cj.macrocall  toml.cj  verify.cj  workspace.cj
cjpm/src/engine/: api.cj
cjpm/src/engine/cache/: cache.cj  (+1 more)
cjpm/src/implement/: build.cj  build_engine.cj  build_parallel.cj  build_script.cj  bundle.cj  central_repository.cj  check.cj  clean.cj  cross_compile.cj  dep_model.cj  depot.cj  file_utils.cj  git.cj  incremental_engine.cj  init.cj  install.cj  isolate.cj  lint.cj  logger.cj  permission.cj  run.cj  test.cj  uninstall.cj  update.cj
cjpm/src/toml/: parser.cj
cjpm/src/util/: graph.cj  types.cj  util.cj  util.cj.macrocall
cjtrace-recover/: CMakeLists.txt
cjtrace-recover/src/: cjtrace-recover.cj
hyperlangExtension/doc/: developer_guide.md  developer_guide_EN.md  user_guide.md  user_guide_zh.md
hyperlangExtension/src/: main.cj
hyperlangExtension/src/dtsparser/: analysis.js  download-binary.js
hyperlangExtension/src/entry/: hle.cj
hyperlangExtension/src/tool/: common.cj  create_ark_api_call_async.cj  create_basic_service_kit.cj  global_config.cj  trans_enum.cj  trans_method.cj  trans_object.cj  type_conversion.cj  type_parser.cj  typemap.cj  util.cj
hyperlangExtension/tests/: test.py
hyperlangExtension/tests/c_cases/: array.h  atomic.h  complex.h  enum.h  field.h  flexible.h  opaque.h  pointer.h  string.h  struct.h  typedef.h  union.h  var.h
hyperlangExtension/tests/cases/: anonymousClass.d.ts  asyncFunction.d.ts  callSignature.d.ts  class.d.ts  enum.d.ts  ets.d.ets  export_class.d.ts  export_class_2.d.ts  functionTypes.d.ts  genericFunction.d.ts  imports.d.ts  interface.d.ts  interface_2.d.ts  namespace.d.ts  superInterface.d.ts  test.d.ts  test1.d.ets  typeAlias.d.ts  typeNodes.d.ts  typealias_1.d.ts  typealias_3.d.ts  typealias_4.d.ts  typeofType.d.ts  unionTypes.d.ts  unionTypes2.d.ts  valueOfModulename.d.ts  variable.d.ts
(+282 files in other folders)
